Fix shift on hover

--- a/src/components/ThemeSelector/ThemeSelector.module.css
+++ b/src/components/ThemeSelector/ThemeSelector.module.css
@@ -1,7 +1,6 @@
 .themeSelector {
   position: absolute;
   bottom: 0rem;
-  /* left: -0.25rem; */
   left: 2.5rem;
   transform-origin: left bottom;
   transform: rotate(-90deg);
@@ -24,6 +23,6 @@
     font-size: 1.5rem;
   }
   &:hover {
-    font-weight: 400;
+    -webkit-text-stroke: 0.4px var(--text);
   }
 }
